ticket:21 Fix overflow of buttons

--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -49,11 +49,10 @@ body {
 */
 
 .panel-wrapper-main-menu {
-  width: 50%;
   margin: 12% auto;
 
   .btn-landing {
-    margin: 0 5%;
+    margin: 5px 5%;
   }
 }
 
